# faiss-server

./: CMakeLists.txt  Dockerfile  Makefile
example/client/: add.py
golang/: faiss.pb.go
protobuf/: faiss.proto
python/: faiss_pb2.py  faiss_pb2_grpc.py
src/: CMakeLists.txt  add.cpp  faiss_server.h
src/protobuf/: faiss.grpc.pb.cc  faiss.grpc.pb.h  faiss.pb.cc  faiss.pb.h
